# netcup-offer-bot

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: automerge.yaml  build-cache.yml  build.yml  docker-image.yaml  docker-image.yml  release-please.yaml  sentry.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  claim-persistentvolumeclaim.yaml  deployment.yaml  podmonitor.yaml  secret.yaml
src/: config.rs  discord_webhook.rs  error.rs  feed.rs  feed_state.rs  lib.rs  main.rs  metrics.rs
