[package]
name = "netcup-offer-bot"
version = "1.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "netcup-offer-bot"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
thiserror = "1.0"
backtrace = "0.3.67"
sentry = { version = "0.31.4", features = ["anyhow", "debug-images", "reqwest", "backtrace", "tracing", "profiling"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
webhook = "2.1.2"
rss = { version = "2.0.4", features = ["validation"] }
reqwest = { version = "0.11.18" }
reqwest-middleware = "0.2.2"
reqwest-tracing = "0.4.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
strum = "0.24.1"
strum_macros = "0.24"
serde = "1.0.164"
serde_json = "1.0.96"
prometheus = { version = "0.13", features = ["process"] }
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }
config = "0.13.3"

[dev-dependencies]
temp-env = "0.3.4"
tempfile = "3.6.0"
serde_test = "1.0.164"

[profile.release]
lto = true
codegen-units = 1
debug = true