[package]
name = "netcup-offer-bot"
version = "1.2.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "netcup-offer-bot"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
thiserror = "1.0"
backtrace = "0.3.71"
sentry = { version = "0.32.2", features = ["anyhow", "debug-images", "reqwest", "backtrace", "tracing", "profiling"] }
chrono = { version = "0.4.37", default-features = false, features = ["clock", "std", "wasmbind", "serde"] }
webhook = "2.1.2"
rss = { version = "2.0.7", features = ["validation"] }
reqwest = { version = "0.12.2" }
reqwest-middleware = "0.2.5"
reqwest-tracing = "0.4.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
strum = "0.26.2"
strum_macros = "0.26"
serde = "1.0.197"
serde_json = "1.0.115"
prometheus = { version = "0.13", features = ["process"] }
prometheus_exporter = "0.8.5"
lazy_static = "1.4.0"
secrecy = { version = "0.8.0", features = ["serde"] }
config = "0.14.0"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3.10.1"
serde_test = "1.0.176"

[profile.release]
lto = true
codegen-units = 1
debug = true